--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </li>
           <li>
             <a href="https://wa.link/yao5ix">
-              <img src="img/WhatsApp8.png" alt="#"><span>Iniciar chat WhatsApp</span>
+              <img src="img/whatsapp8.png" alt="#"><span>Iniciar chat WhatsApp</span>
             </a>
           </li>
         </ul>
