--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Card - Estructura </title>
-  <meta name="description" content="Descripción para el posicionamiento SEO.">
+  <title>Sonia Gómez| Estilista Integral  </title>
+  <meta name="description" content="Tarjeta de contacto digital de Sonia Gómez Estilista Integral. Servicios de Belleza y cuidado personal.">
   <meta name="author" content="WDesigner.co">
-  <meta name="keywords" content="palabras claves, WDesigner, Alejandro Villanueva">
+  <meta name="keywords" content="Estetica, Peluquería, Visajismo, Cejas, WDesigner, Alejandro Villanueva">
   
  <!-- Estilos -->
    <link rel="stylesheet" type="text/css" href="css/styles.css">
