--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sonia Gómez| Estilista Integral  </title>
   <meta name="description" content="Tarjeta de contacto digital de Sonia Gómez Estilista Integral. Servicios de Belleza y cuidado personal.">
   <meta name="author" content="WDesigner.co">
-  <meta name="keywords" content="Estetica, Peluquería, Visajismo, Cejas, WDesigner, Alejandro Villanueva">
+  <meta name="keywords" content="Profilecard, Estetica, Peluquería, Visajismo, Cejas, WDesigner, Alejandro Villanueva">
   
  <!-- Estilos -->
    <link rel="stylesheet" type="text/css" href="css/styles.css">
